Cascading deletion of tasks, users deletion
