# swagger-output.json
@@ -181,6 +181,24 @@
         }
       }
     },
+    "/users/{userID}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "userID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/tasks/": {
       "get": {
         "description": "",
@@ -660,6 +678,24 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/subtasks/deleteall/{taskParentId}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "taskParentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
